reorganize for worker and farmer

--- a/farm/roles/common/tasks/apache.yml
+++ b/farm/roles/common/tasks/apache.yml
@@ -16,7 +16,7 @@
   tags: apache
 
 - copy: 
-    src: configs/raspifarm.conf
+    src: raspifarm.conf
     dest: /etc/apache2/sites-available/raspifarm.conf
     owner: root
     group: root
