--- a/farm/roles/common/tasks/dnsmasq.yml
+++ b/farm/roles/common/tasks/dnsmasq.yml
@@ -11,7 +11,7 @@
     state: stopped
 
 - copy: 
-    src: configs/dnsmasq.conf
+    src: dnsmasq.conf
     dest: /etc/dnsmasq.conf
     owner: root
     group: root
