--- a/farm/roles/common/tasks/nfs-server.yml
+++ b/farm/roles/common/tasks/nfs-server.yml
@@ -11,7 +11,7 @@
     state: present
 
 - copy: 
-    src: configs/exports
+    src: exports
     dest: /etc/exports
     owner: root
     group: root
