--- a/farm/roles/common/tasks/bash_profile.yml
+++ b/farm/roles/common/tasks/bash_profile.yml
@@ -1,7 +1,7 @@
 ---
 - name: 'Copy .bash_profile to home'
   copy: 
-    src: configs/bash_profile
+    src: bash_profile
     dest: "{{ home_dir }}/.bash_profile"
     owner: farmer
     group: admin
