--- a/roles/common/tasks/apache.yml
+++ b/roles/common/tasks/apache.yml
@@ -3,12 +3,15 @@
   apt: 
     name: apache2
     state: present
+    update_cache: ture
+  become: true
   tags: apache
 
 - name: Stop apache2
   service:
     name: apache2
     state: stopped
+  become: true
   tags: apache
 
 - name: Disable default config 
@@ -22,20 +25,24 @@
     group: root
     mode: 0644
     backup: yes
+  become: true
   tags: apache
 
 - name: Enable raspifarm config
   command: a2ensite raspifarm.conf
+  become: true
   tags: apache
 
 - name: Start apache
   service:
     name: apache2
     state: started
+  become: true
   tags: apache
 
 - name: Reload apache
   service: 
     name: apache2
     state: reloaded
+  become: true
   tags: apache
