worker prometheus config working

--- a/roles/worker_config/tasks/node_exporter.yml
+++ b/roles/worker_config/tasks/node_exporter.yml
@@ -5,6 +5,14 @@
     - prometheus-node-exporter
     state: present
 
+- name: Create configuration file
+  template:
+    src: prometheus_node.yml.j2 
+    dest: /etc/prometheus.yml
+    owner: root
+    group: root
+    mode: '0644'
+
 - name: Start node exporter
   service:
     name: prometheus-node-exporter
