--- a/roles/farmer_config/tasks/nfs_server.yml
+++ b/roles/farmer_config/tasks/nfs_server.yml
@@ -18,9 +18,6 @@
     mode: 0644
     backup: yes
   become: true
+  notify:
+    - Reload nfs server
 
-- name: Reload nfs server
-  service: 
-    name: nfs-kernel-server
-    state: reloaded
-  become: true
