teaching farm working

--- a/farmer-init.yml
+++ b/farmer-init.yml
@@ -4,6 +4,6 @@
   connection: ssh
   roles:
     - farmer_config
-    - prometheus
     - common
-
+    - prometheus-server
+    - ansible-role-grafana
