--- a/roles/prometheus-server/vars/main.yml
+++ b/roles/prometheus-server/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 
   install_snmp: True
-
+  #router_ip:  192.168.2.1
   prometheus_server: "{{ ansible_eth0.ipv4.address }}"
   #scraped_hosts: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address']  }}"
   scraped_hosts: "{{ hostvars[inventory_hostname]['groups']['raspifarm-workers']  }}"
