--- a/roles/worker_config/tasks/main.yml
+++ b/roles/worker_config/tasks/main.yml
@@ -3,5 +3,5 @@
 - include: user.yml
 - include: bash_profile.yml
 - include: host_name.yml
-# - include: node_exporter.yml
+- include: node_exporter.yml
 - include: update.yml
