--- a/roles/worker_config/tasks/node_exporter.yml
+++ b/roles/worker_config/tasks/node_exporter.yml
@@ -7,7 +7,16 @@
     update_cache: true
   become: true
 
-- name: Create configuration file
+- name: Create /etc/prometheus directory if it does not exist
+  file:
+    path: /etc/prometheus
+    state: directory
+    owner: root
+    group: root
+    mode: '0755'
+  become: true
+
+- name: Create prometheus configuration file
   template:
     src: prometheus_node.yml.j2 
     dest: /etc/prometheus/prometheus.yml
