added prometheus snmp

--- a/roles/prometheus-server/tasks/main.yml
+++ b/roles/prometheus-server/tasks/main.yml
@@ -36,9 +36,10 @@
   notify:
     - Restart node exporter
 
-- name: Install snmp with mibs
+- name: Install snmp with mibs and exporter
   apt: 
     name:
+      - prometheus-snmp-exporter
       - snmp-mibs-downloader
       - snmp
     state: present
