Add pipeline option to ansible Add runtime performance remove need to add inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
-inventory = ./farm
+INVENTORY = farm
 retry_files_enable = False
+callback_whitelist = profile_tasks
+forks = 10
 
 [ssh_connection]
 pipelining = True
