--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 INVENTORY = farm
-retry_files_enable = False
+retry_files_enabled = False
 callback_whitelist = profile_tasks
 forks = 10
 
