--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -10,6 +10,8 @@
 
 - name: Update all packages to the latest version
   apt:
+    autoremove: yes
+    autoclean: yes
     upgrade: dist
   register: upd_out
 
