--- a/reboot-farm.yml
+++ b/reboot-farm.yml
@@ -1,10 +1,23 @@
-- hosts: raspifarm-workers
+- hosts: workers
   connection: ssh
   become: yes
   gather_facts: no
   tasks:
 
-    - name: reboot cluster
-      command:  /sbin/reboot
+    - name: Rebooting cluster
+      reboot:
+        reboot_timeout: 60
+      register: reboot_msg
+
+    - debug:
+        #msg: "Seconds waiting for reboot {{ elapsed }}"
+        var: reboot_msg
+
+    - name: Wait for the machine to come back online
+      wait_for_connection:
+        connect_timeout: 60
+        sleep: 5
+        delay: 5
+        timeout: 300
 
 
