--- a/shutdown-farm.yml
+++ b/shutdown-farm.yml
@@ -1,10 +1,22 @@
-- hosts: raspifarm-workers
+- hosts: workers
   connection: ssh
   become: yes
   gather_facts: no
   tasks:
 
-    - name:  power off cluster
-      command:  /sbin/poweroff
+    - name: Poweroff cluster
+      shell: sleep 2 && /sbin/shutdown -c && /sbin/shutdown -h now
+      async: 1
+      poll: 0
 
+    - name: Store actual host to be used with local_action
+      set_fact:
+        original_host: "{{ ansible_host }}"
 
+#    - name: Wait for ping loss
+#      local_action: shell ping -q -c 1 -W 1 {{ original_host }}
+#      register: res
+#      retries: 5
+#      until: ('100.0% packet loss' in res.stdout)
+#      failed: ('100.0% packet loss' not in res.stdout)
+#      changed_when: no
