tested adding new node with stock OS. It worked nicely.
command to initialize is  "ansible-playbook -u pi -k  initialize_cluster.yml"

--- a/roles/worker_config/tasks/main.yml
+++ b/roles/worker_config/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 
-- include: user.yml
+# this is not down in worker_init
+# TODO: remove this on next refactor
+# - include: user.yml
+
 - include: bash_profile.yml
 - include: host_name.yml
 - include: node_exporter.yml
