added hosts task to common.  working on eeprom config. (not working)

--- a/farmer-init.yml
+++ b/farmer-init.yml
@@ -1,8 +1,8 @@
 ---
 
-- hosts: raspifarm-master
+- hosts: farmer
   connection: ssh
   roles:
-    - farmer_config
     - common
+    - farmer_config
     - prometheus-server
