--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,6 +4,7 @@
 - include: ruby.yml
 - include: scipy.yml
 - include: mpi4py.yml
+- include: hosts.yml
 
 - include: tmux.yml
   when: pifarm_install_tmux
