--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -13,3 +13,31 @@ pifarm_common_pkgs:
 
 pifarm_install_tmux: false
 
+
+# If set to true, an entry for `ansible_hostname`, bound to the host's default IPv4 address is added added.
+hosts_add_default_ipv4: true
+
+# If set to true, basic IPv6 entries (localhost6, ip6-localnet, etc) are added.
+hosts_add_basic_ipv6: true
+
+# If set to true, an entry for every host managed by Ansible is added. Remark that this makes `hosts_add_default_ipv4` unnecessary, as it will be added as wel by this setting.
+hosts_add_ansible_managed_hosts: true
+
+# Select specific groups of Ansible managed hosts to be added in the hosts file.
+hosts_add_ansible_managed_hosts_groups: ['all']
+
+# Custom hosts entries to be added
+hosts_entries: []
+
+# Custom host file snippets to be added
+hosts_file_snippets: []
+
+# IP protocol to use
+hosts_ip_protocol: 'ipv4'
+
+# Network interface to use
+hosts_network_interface: "{{ ansible_default_ipv4.interface }}"
+
+# Backup of previous host
+host_file_backup: no
+
