--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ facts/*
 
 # attached roles
 roles/ansible-role-grafana/
+
+# preserve the running configuration
+# add how to set these files up in the documentation
+farm
+group_vars/farmer
+group_vars/workers
