--- a/roles/prometheus-server/handlers/main.yml
+++ b/roles/prometheus-server/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Restart prometheus server
+- name: Restart prometheus service
   service:
     name: prometheus
     state: restarted
