--- a/roles/common/tasks/host_name.yml
+++ b/roles/common/tasks/host_name.yml
@@ -1,15 +1,6 @@
 ---
-- name:  "set the hostname to {{ host_name }}"
+- name:  "set the hostname"
   hostname:
-    name: "{{ host_name }}"
-  when: host_name is defined
+    name: "{{ ansible_fqdn }}"
 
-- name: changing 127.0.1.1 in /etc/hosts
-  lineinfile:
-    path: /etc/hosts
-    regexp: '^127\.0\.1\.1'
-    line: '127.0.1.1 {{ host_name }}'
-    owner: root
-    group: root
-    mode: 0644
-  when: host_name is defined
+
