--- a/roles/common/tasks/ruby.yml
+++ b/roles/common/tasks/ruby.yml
@@ -1,12 +1,16 @@
 ---
 
 - name: Install ruby
-  apt: 
+  package: 
     name: ruby
     state: present
-    force: yes
     update_cache: true
+  register: package_out
   become: true
+
+- debug:
+    var: package_out
+
 
   #- name: Install rubygems
   #  apt: 
