--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,17 +1,20 @@
 ---
 
-pifarm_common_pkgs:
-  - vim
-  - git
-  - wget
-  - htop
-  - rsync
-  - vlan
-  - dnsutils
-  - tcpdump
-  - figlet
+# pifarm_common_pkgs:
+#   - vim
+#   - git
+#   - wget
+#   - htop
+#   - rsync
+#   - vlan
+#   - dnsutils
+#   - tcpdump
+#   - figlet
 
+# TODO  document and refactor
 pifarm_install_tmux: false
+pifarm_install_scipy: true
+pifarm_install_mpi: true
 
 
 # If set to true, an entry for `ansible_hostname`, bound to the host's default IPv4 address is added added.
