--- a/roles/prometheus-server/tasks/main.yml
+++ b/roles/prometheus-server/tasks/main.yml
@@ -1,89 +1,80 @@
 ---
 
-- name: Install prometheus server
-  package: 
-    pkg:
-    - prometheus
-    state: present
-    update_cache: true
-  become: true
-  when: 
-    - pifarm_install_prometheus
+- block:
 
-- name: Install prometheus node exporter
-  package: 
-    pkg:
-    - prometheus-node-exporter
-    state: present
-    update_cache: true
-  become: true
-  when: 
-    - pifarm_install_prometheus
+    - name: Install prometheus server
+      package: 
+        pkg: prometheus
+        state: present
+        update_cache: true
+      become: true
 
-- name: Create /etc/prometheus directory if it does not exist
-  file:
-    path: /etc/prometheus
-    state: directory
-    owner: root
-    group: root
-    mode: '0755'
-  become: true
-  when: 
-    - pifarm_install_prometheus
+    - name: Install prometheus node exporter
+      package: 
+        pkg: prometheus-node-exporter
+        state: present
+        update_cache: true
+      become: true
 
-- name: Create configuration file
-  template:
-    src: prometheus_server.xml.j2
-    dest: /etc/prometheus/prometheus.yml
-    owner: root
-    group: root
-    mode: '0644'
-  become: true
-  notify:
-    - Restart prometheus service
-  when: 
-    - pifarm_install_prometheus
+    - name: Create /etc/prometheus directory if it does not exist
+      file:
+        path: /etc/prometheus
+        state: directory
+        owner: root
+        group: root
+        mode: '0755'
+      become: true
 
-- name: Install snmp with mibs and exporter
-  apt: 
-    name:
-      - prometheus-snmp-exporter
-      - snmp-mibs-downloader
-      - snmp
-    state: present
-  become: yes
-  tags:
-    - perfmon
-  when: 
-    - pifarm_install_prometheus
-    - prometheus_install_snmp
+    - name: Create configuration file
+      template:
+        src: prometheus_server.xml.j2
+        dest: /etc/prometheus/prometheus.yml
+        owner: root
+        group: root
+        mode: '0644'
+      become: true
+      notify:
+        - Restart prometheus service
 
-- name: Configure Prometheus snmp.yml
-  copy:
-    src: snmp.yml
-    dest: /etc/prometheus/snmp.yml
-    owner: root
-    group: root
-    mode: '0644'
-  become: yes
-  tags:
-    - perfmon
-  when: 
-    - pifarm_install_prometheus
-    - prometheus_install_snmp
+    - name: Install snmp with mibs and exporter
+      apt: 
+        name:
+          - prometheus-snmp-exporter
+          - snmp-mibs-downloader
+          - snmp
+        state: present
+      become: yes
+      tags:
+        - perfmon
+      when: 
+         - prometheus_install_snmp
 
-- name: Copy the MIB file to the proper location
-  copy:
-    src: UBNT-MIB 
-    dest: /var/lib/snmp/mibs/UBNT-MIB
-    owner: root
-    group: root
-    mode: '0664'
-  become: yes
-  tags:
-    - perfmon
-  when: 
-    - pifarm_install_prometheus
-    - prometheus_install_snmp
+    - name: Configure Prometheus snmp.yml
+      copy:
+        src: snmp.yml
+        dest: /etc/prometheus/snmp.yml
+        owner: root
+        group: root
+        mode: '0644'
+      become: yes
+      tags:
+        - perfmon
+      when: 
+        - prometheus_install_snmp
 
- 
+    - name: Copy the MIB file to the proper location
+      copy:
+        src: UBNT-MIB 
+        dest: /var/lib/snmp/mibs/UBNT-MIB
+        owner: root
+        group: root
+        mode: '0664'
+      become: yes
+      tags:
+        - perfmon
+      when: 
+        - prometheus_install_snmp
+
+  when:
+    - pifarm_install_prometheus
+  
