Working the facts problem and the connectivity Added bypass for non-internet clusters

--- a/farm.yml
+++ b/farm.yml
@@ -3,33 +3,43 @@
 workers:
   hosts:
     pi-101:
-      ansible_host: 192.168.79.101
+      ansible_host: 192.168.102.110
       pifarm_hostname: pi-101
     pi-102:
-      ansible_host: 192.168.79.102
+      ansible_host: 192.168.102.122
       pifarm_hostname: pi-102
     pi-103:
-      ansible_host: 192.168.79.103
+      ansible_host: 192.168.102.111
       pifarm_hostname: pi-103
     pi-104:
-      ansible_host: 192.168.79.104
+      ansible_host: 192.168.102.108
       pifarm_hostname: pi-104
   vars:
+
+    # ... this is the farmes public ssh key
+    remote_user_ssh: "/home/lavender/.ssh/id_rsa.pub"
+
+    # ... this is the pi user which will be used
     home_dir: /home/lab
-    remote_user_ssh: "/home/lab/.ssh/id_rsa.pub"
     remote_user: lab
     remote_uid: 1001
     remote_group: lab
     remote_gid: 1001
+    
+    # ... this is the user to connect to the pifarm with (TODO fix)
+    ansible_user: lab
+
+    # ... This lab is not connected to the internet
+    pifarm_connected_internet: False
 
 farmer:
   hosts:
     pi-farmer:
-      # ansible_host: 192.168.79.2
-      ansible_host: 127.0.0.1
+      ansible_host: 192.168.102.1
       pifarm_hostname: farmer
+      ansible_user: lavender
   vars:
-    # ... defind controlling user
+    # ... define controlling user
     local_user: lavender
     local_group: lavender
     home_dir: /home/lavender
@@ -40,5 +50,5 @@ farmer:
     pifarm_install_dnsmasq: true
 
     # ... networking
-    router_ip: 192.168.79.1
+    router_ip: 192.168.102.1
 
