reworking the cluster inititalization...I think I got it

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,9 @@ INVENTORY = farm.yml
 retry_files_enabled = False
 callback_whitelist = profile_tasks
 forks = 10
+interpreter_python=auto_silent 
+# strategy = debug
+
 
 [ssh_connection]
 pipelining = True
