--- a/dump_hostvars.yml
+++ b/dump_hostvars.yml
@@ -3,6 +3,6 @@
   gather_facts: no
   tasks:
 
-    - name: dump groupvars
+    - name: dump hostvars
       debug:
         var: hostvars[inventory_hostname]
