--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,8 +3,8 @@
 - name: "Include {{ ansible_os_family }} vars"
   include_vars: "{{ ansible_os_family }}.yml"
 
-- include: host_name.yml
-- include: hosts.yml
+# - include: host_name.yml
+# - include: hosts.yml
 
 - block:
 
