--- a/roles/init-cluster-worker/tasks/main.yml
+++ b/roles/init-cluster-worker/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: 'Ensure the group exists'
   become: yes
   group:
-    gid: "{{ remote_gid }}"
+    # gid: "{{ remote_gid }}"
     name: "{{ remote_group }}"
     state: present
   tags: create_user
@@ -12,7 +12,7 @@
   become: yes
   user:
     name: "{{ remote_user }}"
-    uid: "{{ remote_uid }}"
+    # uid: "{{ remote_uid }}"
     group: "{{ remote_group }}"
     shell: /bin/bash
     home: "{{ home_dir }}"
