--- a/farm.yml
+++ b/farm.yml
@@ -1,5 +1,12 @@
 ---
 
+# This is the PiFarm Inventory and variables file.
+# This file along with all those in the "group_vars" directory will
+# set all the controlling variables for the ansible scripts
+
+# There are two main sections "workers"  and "farmer".
+# First in are two dictionary variables of "host" and their associated "vars"
+
 workers:
   hosts:
     pi-101:
@@ -14,21 +21,35 @@ workers:
     pi-104:
       ansible_host: 192.168.102.108
       pifarm_hostname: pi-104
+  
+  # vars for all workers are in this section.
   vars:
 
     # ... this is the farms public ssh key
+    # this is crude and needs to be better set as sometimes 
+    # I don't want to use the users ssh keys, but ones setup
+    # for this task.
     remote_user_ssh: "/home/lavender/.ssh/id_rsa.pub"
 
     # ... this is the pi user which will be used
+    # This user will be setup. I don't like to use the default user ('pi')
+    # This user has no password, so it is only usable via ssh.
     home_dir: /home/lab
     remote_user: lab
     remote_group: lab
     
-    # ... this is the user to connect to the pifarm with (TODO fix)
+    # ... this is the user to connect to the pifarm for ansible scripts
+    # This seems crude, but I am not sure how to specify it any other way.
     ansible_user: lab
 
-    # ... This lab is not connected to the internet
+    # ... Is this lab connected to the internet so I can update?
+    # If there is no gateway to the internet, then set this to False.
+    # As my default boot image grow older, this is desired.
     pifarm_connected_internet: True
+
+# The farmer is a "master" concept.  For not it is a single machine, but
+# in the furture it could be more.
+# Notice how the ansible_user is set on the host level and not the common level.
 
 farmer:
   hosts:
@@ -37,16 +58,18 @@ farmer:
       pifarm_hostname: farmer
       ansible_user: lavender
   vars:
-    # ... define controlling user
+    # ... define controlling user.
     local_user: lavender
     local_group: lavender
     home_dir: /home/lavender
 
     # ... pifarm services (on farmer)
+    # What services to setup on the farmers
     export_nfs_share: false
     pifarm_install_prometheus: false
     pifarm_install_dnsmasq: false
 
-    # ... networking
-    router_ip: 192.168.102.1
+    # ... networking (not used today)
+    # It is set on the PiFarm workers via the DHCP server (dnsmasq or ubiquiti router)
+    router_ip: 192.168.102.2
 
