--- a/farm.yml
+++ b/farm.yml
@@ -7,69 +7,76 @@
 # There are two main sections "workers"  and "farmer".
 # First in are two dictionary variables of "host" and their associated "vars"
 
-workers:
-  hosts:
-    pi-101:
-      ansible_host: 192.168.102.110
-      pifarm_hostname: pi-101
-    pi-102:
-      ansible_host: 192.168.102.122
-      pifarm_hostname: pi-102
-    pi-103:
-      ansible_host: 192.168.102.111
-      pifarm_hostname: pi-103
-    pi-104:
-      ansible_host: 192.168.102.108
-      pifarm_hostname: pi-104
-  
-  # vars for all workers are in this section.
+all:
+  children:
+    workers:
+      hosts:
+        pi-101:
+          ansible_host: 192.168.102.110
+          pifarm_hostname: pi-101
+        pi-102:
+          ansible_host: 192.168.102.122
+          pifarm_hostname: pi-102
+        pi-103:
+          ansible_host: 192.168.102.111
+          pifarm_hostname: pi-103
+        pi-104:
+          ansible_host: 192.168.102.108
+          pifarm_hostname: pi-104
+      
+      # vars for all workers are in this section.
+      vars:
+
+        # ... this is the farms public ssh key
+        # this is crude and needs to be better set as sometimes 
+        # I don't want to use the users ssh keys, but ones setup
+        # for this task.
+        remote_user_ssh: "/home/lavender/.ssh/id_rsa.pub"
+
+        # ... this is the pi user which will be used
+        # This user will be setup. I don't like to use the default user ('pi')
+        # This user has no password, so it is only usable via ssh.
+        home_dir: /home/lab
+        remote_user: lab
+        remote_group: lab
+        
+        # ... this is the user to connect to the pifarm for ansible scripts
+        # This seems crude, but I am not sure how to specify it any other way.
+        ansible_user: lab
+
+        # ... Is this lab connected to the internet so I can update?
+        # If there is no gateway to the internet, then set this to False.
+        # As my default boot image grow older, this is desired.
+        pifarm_connected_internet: True
+
+    # The farmer is a "master" concept.  For not it is a single machine, but
+    # in the furture it could be more.
+    # Notice how the ansible_user is set on the host level and not the common level.
+
+    farmer:
+      hosts:
+        pi-farmer:
+          ansible_host: 192.168.102.1
+          pifarm_hostname: farmer
+          ansible_user: lavender
+      vars:
+        # ... define controlling user.
+        local_user: lavender
+        local_group: lavender
+        home_dir: /home/lavender
+
+        # ... pifarm services (on farmer)
+        # What services to setup on the farmers
+        export_nfs_share: false
+        pifarm_install_prometheus: false
+        pifarm_install_dnsmasq: false
+
+        # ... networking (not used today)
+        # It is set on the PiFarm workers via the DHCP server (dnsmasq or ubiquiti router)
+        router_ip: 192.168.102.2
+
+  #  This contains site wide variables. 
   vars:
+    pifarm_domainname: pifarm.lab
 
-    # ... this is the farms public ssh key
-    # this is crude and needs to be better set as sometimes 
-    # I don't want to use the users ssh keys, but ones setup
-    # for this task.
-    remote_user_ssh: "/home/lavender/.ssh/id_rsa.pub"
-
-    # ... this is the pi user which will be used
-    # This user will be setup. I don't like to use the default user ('pi')
-    # This user has no password, so it is only usable via ssh.
-    home_dir: /home/lab
-    remote_user: lab
-    remote_group: lab
-    
-    # ... this is the user to connect to the pifarm for ansible scripts
-    # This seems crude, but I am not sure how to specify it any other way.
-    ansible_user: lab
-
-    # ... Is this lab connected to the internet so I can update?
-    # If there is no gateway to the internet, then set this to False.
-    # As my default boot image grow older, this is desired.
-    pifarm_connected_internet: True
-
-# The farmer is a "master" concept.  For not it is a single machine, but
-# in the furture it could be more.
-# Notice how the ansible_user is set on the host level and not the common level.
-
-farmer:
-  hosts:
-    pi-farmer:
-      ansible_host: 192.168.102.1
-      pifarm_hostname: farmer
-      ansible_user: lavender
-  vars:
-    # ... define controlling user.
-    local_user: lavender
-    local_group: lavender
-    home_dir: /home/lavender
-
-    # ... pifarm services (on farmer)
-    # What services to setup on the farmers
-    export_nfs_share: false
-    pifarm_install_prometheus: false
-    pifarm_install_dnsmasq: false
-
-    # ... networking (not used today)
-    # It is set on the PiFarm workers via the DHCP server (dnsmasq or ubiquiti router)
-    router_ip: 192.168.102.2
-
+ 
