--- a/roles/worker-config/defaults/main.yml
+++ b/roles/worker-config/defaults/main.yml
@@ -2,3 +2,6 @@
 
 # By default we are connected to the internet, so we can get updates
 pifarm_connected_internet: True
+
+# Don't put in the prometheus node exporter
+pifarm_configure_node_exporter: False
