--- a/roles/dnsmasq/tasks/dnsmasq.yml
+++ b/roles/dnsmasq/tasks/dnsmasq.yml
@@ -1,24 +1,30 @@
 ---
-    # dnsmasq 
-- name: Install dnsmasq
-  package: 
-    name: dnsmasq
-    state: present
+# dnsmasq 
 
-- name: Stop dnsmasq
-  service:
-    name: dnsmasq
-    state: stopped
+- block:
 
-- copy: 
-    src: dnsmasq.conf
-    dest: /etc/dnsmasq.conf
-    owner: root
-    group: root
-    mode: 0644
-    backup: yes
+  - name: Install dnsmasq
+    package: 
+      name: dnsmasq
+      state: present
 
-- name: Start dnsmasq
-  service:
-    name: dnsmasq
-    state: started
+  - name: Stop dnsmasq
+    service:
+      name: dnsmasq
+      state: stopped
+
+  - copy: 
+      src: dnsmasq.conf
+      dest: /etc/dnsmasq.conf
+      owner: root
+      group: root
+      mode: 0644
+      backup: yes
+
+  - name: Start dnsmasq
+    service:
+      name: dnsmasq
+      state: started
+
+  when:
+    - pifarm_install_dnsmasq
