--- a/roles/common/tasks/scipy.yml
+++ b/roles/common/tasks/scipy.yml
@@ -10,6 +10,8 @@
     state: present
     update_cache: true
   become: true
-  tags:
-    - basic
+  register: package_out
 
+- debug:
+    var: package_out
+    verbosity: 1
