--- a/roles/update/tasks/update_pi.yml
+++ b/roles/update/tasks/update_pi.yml
@@ -9,6 +9,7 @@
 
 - debug:
     var: upd_cache_out
+    verbosity: 1
 
 - name: Update all packages to the latest version (Debian)
   apt:
@@ -17,11 +18,17 @@
 
 - debug:
     var: upd_out
+    verbosity: 1
 
 - name: Check if a reboot is needed for Debian and Ubuntu boxes
-  register: reboot_required_file
+  register: reboot_is_required
   stat: path=/var/run/reboot-required get_md5=no
 
+- debug:
+    var: reboot_is_required
+    verbosity: 1
+
+# SMELL  move this to a hander ????
 - name: Reboot the Debian or Ubuntu server
   reboot:
     msg: "Reboot initiated by Ansible due to kernel updates"
@@ -30,4 +37,4 @@
     pre_reboot_delay: 0
     post_reboot_delay: 30
     test_command: uptime
-  when: reboot_required_file.stat.exists
+  when: reboot_is_required.stat.exists
